--- a/ethereum/package.json
+++ b/ethereum/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.4.2",
     "dotenv": "^14.2.0"
   }
 }
